-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2012-03-15	pwessel
	* mgd77/*.c:		Introduced support for NGDC's MGD77T (tab-delimited) format
	* mgd77list.c:		Confused the meaning of -F shorthands mgd77 and all.  Now handle
				all the stored and derived quantities needed to reproduce original data.

2012-03-15	remko
	* examples/CMakeLists.txt:	Complete revision. Tests now run with "check" script.
	* scripts/*.sh test/*/*.sh:	---"---

2012-03-14	remko
	* gmtset.c:		Will write out the expansion of shorthands (like -R...) into
				.gmtcommands file when those options (GMT_SHORTHAND_OPTIONS) are used.

2012-03-12	remko
	* scripts/CMakeLists.txt:
				Scripts now run in build directory without copying files.
	* scripts/CMakeLists.txt examples/CMakeLists.txt:
				No more "dark magic" with recursive calling of CMakeLists.txt.
	* cmake/modules/ScriptToVerbatim:
				Introduced to handle .sh to .txt conversion.

2012-03-11	remko
	* test/functions.sh.cmake test/*/*.sh test/CMakeLists.txt:
				Changed so that testing occurs in build directory without copying
				files.
	* test/*/orig/*.ps:	Moved to test/*/*.ps

2012-03-07	pwessel
	* psbasemap.c:		The -Tm option now places degree symbols.  Changed default magnetic
				declination annotation interval from 10 to 30.

2012-03-03	fwobbe
	*			Reintegrated branch cmake-build back into the trunk
	*			Tagged release 5.0.0 (before reintegration into trunk)

2012-02-25	pwessel
	* *.c:		Did not consistently use COL_SEPARATOR and/or FORMAT_FLOAT_OUT for ascii output.

2012-02-22	pwessel
	* gmt_support.c:	gmt_inonout_sphpol_count did not properly handle line segments
				that were exactly vertical in all cases, leading to errors as
				to a point being inside or outside a spherical polygon.  Also,
				points exactly on a vertical segment were not flagged as being